AM_CPPFLAGS = -Wall -O2
AM_LDFLAGS = -lelf

bindir = ..

bin_PROGRAMS = satsim
satsim_SOURCES = satsim.cpp satsim.h NanoLogCpp17.h core.cpp core.h fetch.cpp fetch.h decode.cpp decode.h execute.cpp execute.h reg_access.cpp reg_access.h mem_access.cpp mem_access.h exception.h exception.cpp write_back.h write_back.cpp elf_reader.cpp elf_reader.h reg.cpp reg.h instruction.cpp instruction.h 
